# CopyTinyMPC

./: CMakeLists.txt  README.md
common/: types_constants.cpp  types_constants.h
data_store/: pendulum_data.h
test/: test_cartpole.cpp  test_tinympc.cpp
tinympc/: admm.cpp  admm.h  discretization.cpp  discretization.h  lqr_dp.cpp  lqr_dp.h
